fixed alignment on headers and p

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -127,5 +127,5 @@ h3,
 h4,
 h5,
 p {
-  text-align: right;
+  text-align: center;
 }
